--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,5 @@
 @import "tailwindcss";
-@theme {
-  --color-primaryDark: #388e3c; /* Dark Green */
-  --color-helper: #66bb6a;      /* Light Green */
-  --color-background: #e8f5e9;  /* Very Light Green */
-  --color-primaryLight: #81c784; /* Medium Green */
-  --color-gradient: linear-gradient(90deg, rgba(56, 142, 60, 0.8) 0%, rgba(103, 158, 78, 0.8) 100%);
-}
+@import "tw-animate-css";
 @layer base {
   html {
     background-color: var(--color-background);
@@ -21,6 +15,149 @@
   body {
     background-color: var(--color-background);
   }
+:root {
+  --background: oklch(0.9491 0.0085 197.0126);
+  --foreground: oklch(0.3772 0.0619 212.6640);
+  --card: oklch(0.5428 0.0594 201.5662);
+  --card-foreground: oklch(0.3772 0.0619 212.6640);
+  --popover: oklch(0.9724 0.0053 197.0692);
+  --popover-foreground: oklch(0.3772 0.0619 212.6640);
+  --primary: oklch(0.5624 0.0947 203.2755);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.3772 0.0619 212.6640);
+  --secondary-foreground: oklch(0.3772 0.0619 212.6640);
+  --muted: oklch(0.9295 0.0107 196.9723);
+  --muted-foreground: oklch(0.5428 0.0594 201.5662);
+  --accent: oklch(0.9021 0.0297 201.8915);
+  --accent-foreground: oklch(0.3772 0.0619 212.6640);
+  --destructive: oklch(0.5732 0.1901 25.5409);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.8931 0.0205 204.4136);
+  --input: oklch(0.9244 0.0181 196.8450);
+  --ring: oklch(0.5624 0.0947 203.2755);
+  --chart-1: oklch(0.5624 0.0947 203.2755);
+  --chart-2: oklch(0.6389 0.1029 201.5918);
+  --chart-3: oklch(0.7124 0.1075 201.2486);
+  --chart-4: oklch(0.7701 0.0979 201.1816);
+  --chart-5: oklch(0.8336 0.0771 200.9702);
+  --sidebar: oklch(0.9280 0.0183 205.3151);
+  --sidebar-foreground: oklch(0.3772 0.0619 212.6640);
+  --sidebar-primary: oklch(0.5624 0.0947 203.2755);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.9021 0.0297 201.8915);
+  --sidebar-accent-foreground: oklch(0.3772 0.0619 212.6640);
+  --sidebar-border: oklch(0.8931 0.0205 204.4136);
+  --sidebar-ring: oklch(0.5624 0.0947 203.2755);
+  --font-sans: Courier New, monospace;
+  --font-serif: Courier New, monospace;
+  --font-mono: Courier New, monospace;
+  --radius: 0.125rem;
+  --shadow-2xs: 1px 1px 2px 0px hsl(185 70% 30% / 0.07);
+  --shadow-xs: 1px 1px 2px 0px hsl(185 70% 30% / 0.07);
+  --shadow-sm: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 1px 2px -1px hsl(185 70% 30% / 0.15);
+  --shadow: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 1px 2px -1px hsl(185 70% 30% / 0.15);
+  --shadow-md: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 2px 4px -1px hsl(185 70% 30% / 0.15);
+  --shadow-lg: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 4px 6px -1px hsl(185 70% 30% / 0.15);
+  --shadow-xl: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 8px 10px -1px hsl(185 70% 30% / 0.15);
+  --shadow-2xl: 1px 1px 2px 0px hsl(185 70% 30% / 0.38);
+  --tracking-normal: 0em;
+  --spacing: 0.25rem;
+}
+.dark {
+  --background: oklch(0.2068 0.0247 224.4533);
+  --foreground: oklch(0.8520 0.1269 195.0354);
+  --card: oklch(0.2293 0.0276 216.0674);
+  --card-foreground: oklch(0.8520 0.1269 195.0354);
+  --popover: oklch(0.2293 0.0276 216.0674);
+  --popover-foreground: oklch(0.8520 0.1269 195.0354);
+  --primary: oklch(0.8520 0.1269 195.0354);
+  --primary-foreground: oklch(0.2068 0.0247 224.4533);
+  --secondary: oklch(0.3775 0.0564 216.5010);
+  --secondary-foreground: oklch(0.8520 0.1269 195.0354);
+  --muted: oklch(0.2894 0.0412 218.8153);
+  --muted-foreground: oklch(0.6611 0.0975 195.0526);
+  --accent: oklch(0.3775 0.0564 216.5010);
+  --accent-foreground: oklch(0.8520 0.1269 195.0354);
+  --destructive: oklch(0.6168 0.2086 25.8088);
+  --destructive-foreground: oklch(0.9612 0 0);
+  --border: oklch(0.3775 0.0564 216.5010);
+  --input: oklch(0.3775 0.0564 216.5010);
+  --ring: oklch(0.8520 0.1269 195.0354);
+  --chart-1: oklch(0.8520 0.1269 195.0354);
+  --chart-2: oklch(0.6611 0.0975 195.0526);
+  --chart-3: oklch(0.5804 0.0849 195.0673);
+  --chart-4: oklch(0.4269 0.0630 202.6247);
+  --chart-5: oklch(0.3142 0.0455 204.1575);
+  --sidebar: oklch(0.2068 0.0247 224.4533);
+  --sidebar-foreground: oklch(0.8520 0.1269 195.0354);
+  --sidebar-primary: oklch(0.8520 0.1269 195.0354);
+  --sidebar-primary-foreground: oklch(0.2068 0.0247 224.4533);
+  --sidebar-accent: oklch(0.3775 0.0564 216.5010);
+  --sidebar-accent-foreground: oklch(0.8520 0.1269 195.0354);
+  --sidebar-border: oklch(0.3775 0.0564 216.5010);
+  --sidebar-ring: oklch(0.8520 0.1269 195.0354);
+  --font-sans: Source Code Pro, monospace;
+  --font-serif: Source Code Pro, monospace;
+  --font-mono: Source Code Pro, monospace;
+  --radius: 0.125rem;
+  --shadow-2xs: 1px 1px 2px 0px hsl(180 70% 60% / 0.10);
+  --shadow-xs: 1px 1px 2px 0px hsl(180 70% 60% / 0.10);
+  --shadow-sm: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 1px 2px -1px hsl(180 70% 60% / 0.20);
+  --shadow: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 1px 2px -1px hsl(180 70% 60% / 0.20);
+  --shadow-md: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 2px 4px -1px hsl(180 70% 60% / 0.20);
+  --shadow-lg: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 4px 6px -1px hsl(180 70% 60% / 0.20);
+  --shadow-xl: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 8px 10px -1px hsl(180 70% 60% / 0.20);
+  --shadow-2xl: 1px 1px 2px 0px hsl(180 70% 60% / 0.50);
+}
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
+}
   ol,
   ul,
   li,
@@ -34,69 +171,47 @@
 }
 @layer components {
   .selectItem {
-    @apply text-base text-[var(--color-primaryDark)] py-3 focus:bg-[var(--color-primaryLight)] cursor-pointer focus:text-[var(--color-background)] focus:outline-none pl-2;
-    font-weight: 500;
+    @apply text-base text-primary py-3 focus:bg-primary/10 cursor-pointer focus:text-primary-foreground focus:outline-none pl-2 font-medium;
   }
   .primaryParagraph {
-    @apply text-slate-700 text-base;
-    line-height: 1.6;
+    @apply text-base text-muted-foreground leading-relaxed;
   }
   .primaryHeading {
-    @apply text-[var(--color-primaryDark)] sm:text-3xl md:text-4xl text-2xl;
-    font-weight: 700;
-    line-height: 1.3;
+    @apply text-primary sm:text-3xl md:text-4xl text-2xl font-bold leading-tight;
   }
   .secondaryHeading {
-    @apply text-xl font-semibold text-[var(--color-primaryDark)];
+    @apply text-xl font-semibold text-secondary;
   }
   .subHeading {
-    @apply text-xl text-[var(--color-primaryDark)] font-semibold my-3 mb-3 capitalize relative;
+    @apply relative my-3 mb-3 text-xl font-semibold capitalize text-primary;
   }
   .subHeading::before {
     content: "";
-    @apply absolute top-[110%] left-0 w-3 h-3 rounded-full;
-    background: var(--color-helper);
+    @apply absolute top-[110%] left-0 h-3 w-3 rounded-full bg-accent;
   }
   .subHeading::after {
     content: "";
-    @apply absolute top-[calc(110%+0.375rem)] left-3 w-[80px] h-1;
-    background: var(--color-helper);
-  }
-  .primaryButton {
-    transition: all 0.3s ease;
-    font-weight: 500;
+    @apply absolute left-3 top-[calc(110%+0.375rem)] h-1 w-[80px] bg-accent;
   }
   .flexCenter {
-    @apply flex justify-center items-center;
+    @apply flex items-center justify-center;
   }
   .flexBetween {
-    @apply flex justify-between items-center;
+    @apply flex items-center justify-between;
   }
-  .flexEvenly{
-    @apply justify-around items-center
+  .flexEvenly {
+    @apply flex items-center justify-around;
   }
   .container {
-    @apply max-w-[90vw] mx-auto;
+    @apply mx-auto max-w-[90vw];
   }
   .errorMessage {
-    @apply text-base text-red-500;
+    @apply text-base text-destructive;
   }
   .successMessage {
     @apply text-base text-green-600;
   }
-  .formItem input[type="text"] {
-    @apply outline-none rounded-md p-3 border w-full;
-  }
-  .formItem {
-    @apply w-full p-3  focus:outline-none text-[var(--color-primaryDark)] ;
-  }
-  .selectInput {
-    @apply w-full bg-white p-3 text-[var(--color-primaryDark)] rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[var(--color-primaryDark)];
-  }
-  .formLabel {
-    @apply text-[var(--color-primaryDark)] font-medium mb-1 block;
-  }
   .fullScreen {
-    @apply w-screen h-screen;
+    @apply h-screen w-screen;
   }
 }
