--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-
 @custom-variant dark (&:is(.dark *));
 @layer base {
   html {
@@ -184,17 +183,6 @@
   .secondaryHeading {
     @apply text-xl font-semibold text-secondary;
   }
-  .subHeading {
-    @apply relative my-3 mb-3 text-xl font-semibold capitalize text-primary;
-  }
-  .subHeading::before {
-    content: "";
-    @apply absolute top-[110%] left-0 h-3 w-3 rounded-full bg-accent;
-  }
-  .subHeading::after {
-    content: "";
-    @apply absolute left-3 top-[calc(110%+0.375rem)] h-1 w-[80px] bg-accent;
-  }
   .flexCenter {
     @apply flex items-center justify-center;
   }
@@ -216,8 +204,10 @@
   .fullScreen {
     @apply h-screen w-screen;
   }
+  .childrenPages{
+    @apply min-h-[80vh]
+  }
 }
-
 :root {
   --sidebar: hsl(0 0% 98%);
   --sidebar-foreground: hsl(240 5.3% 26.1%);
@@ -228,7 +218,6 @@
   --sidebar-border: hsl(220 13% 91%);
   --sidebar-ring: hsl(217.2 91.2% 59.8%);
 }
-
 .dark {
   --sidebar: hsl(240 5.9% 10%);
   --sidebar-foreground: hsl(240 4.8% 95.9%);
@@ -239,7 +228,6 @@
   --sidebar-border: hsl(240 3.7% 15.9%);
   --sidebar-ring: hsl(217.2 91.2% 59.8%);
 }
-
 @theme inline {
   --color-sidebar: var(--sidebar);
   --color-sidebar-foreground: var(--sidebar-foreground);
@@ -250,7 +238,6 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 }
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
