selectable country componnet completed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,6 +152,11 @@
   .pagesContent{
     @apply w-full
   }
+  .logoContainer {
+  position: relative;
+  width: 200px;
+  height: 50px;
+}
 }
 @layer base {
   * {
