--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,9 +153,10 @@
     @apply w-full
   }
   .logoContainer {
-  position: relative;
-  width: 200px;
-  height: 50px;
+    @apply relative w-[200px] h-[50px]
+}
+.twoColumnSection{
+  @apply flex
 }
 }
 @layer base {
