rounded border added to the shadcn components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,6 +160,9 @@
   .twoColumnSection {
     @apply flex flex-col gap-4 md:flex-row justify-between
   }
+  .rounded{
+    @apply rounded-tr-lg rounded-bl-lg rounded-tl-none rounded-br-none;
+  }
 }
 @layer base {
   * {
