--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,7 +160,7 @@
   .twoColumnSection {
     @apply flex flex-col gap-4 md:flex-row justify-between
   }
-  .rounded{
+  .roundedExtra{
     @apply rounded-tr-lg rounded-bl-lg rounded-tl-none rounded-br-none;
   }
 }
