--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,9 +7,9 @@
   --card-foreground: oklch(0.267 0.097 256.8);
   --popover: oklch(0.97 0.01 256.04);
   --popover-foreground: oklch(0.267 0.097 256.8);
-  --primary: oklch(0.267 0.097 256.8);
+  --primary: #27A1DC;
   --primary-foreground: oklch(0.93 0.02 256.04);
-  --secondary: oklch(0.267 0.097 256.8);
+  --secondary: #1067A2;
   --secondary-foreground: oklch(0.93 0.02 256.04);
   --muted: oklch(0.88 0.02 256.04);
   --muted-foreground: oklch(0.55 0.05 256.04);
@@ -119,7 +119,7 @@
     @apply text-base text-muted-foreground leading-relaxed;
   }
   .primaryHeading {
-    @apply text-primary sm:text-3xl md:text-4xl text-2xl font-bold leading-tight;
+    @apply text-2xl sm:text-3xl md:text-4xl font-bold leading-tight bg-gradient-to-l from-[var(--secondary)] via-[var(--primary)] to-[var(--foreground)] bg-clip-text text-transparent inline-block;
   }
   .secondaryHeading {
     @apply text-xl font-semibold text-secondary;
@@ -179,7 +179,7 @@
   .roundedExtra {
     @apply rounded-tr-3xl rounded-bl-3xl;
   }
-  .linkText{
+  .linkText {
     @apply text-muted-foreground hover:text-foreground transition-colors;
   }
 }
